--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "prettier": "prettier --write \"./components\" \"./pages\" \"./lib\""
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.2",
     "@navikt/ds-css": "^0.9.0",
     "@navikt/ds-icons": "^0.5.4",
     "@navikt/ds-react": "^0.10.1",
