--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
     "@types/react": "17.0.24",
     "@types/styled-components": "^5.1.14",
     "babel-plugin-styled-components": "^1.13.2",
+    "cookie": "^0.4.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "prettier": "^2.4.1",
