adding public_backend to container environment instead of dockerfile
Co-authored-by: Christine Teig <christine.teig@nav.no>
Co-authored-by: Tore Sinding Bekkedal <tore.sinding.bekkedal@nav.no>

--- a/.nais/dev-gcp.yaml
+++ b/.nais/dev-gcp.yaml
@@ -11,5 +11,5 @@ spec:
   ingresses:
     - "https://nada.dev.intern.nav.no/"
   env:
-    - name: NEXT_PRODUCTION_BACKEND
-      value: https://nada.dev.intern.nav.no/api
+    - name: NEXT_PUBLIC_BACKEND 
+      value: https://nada.dev.intern.nav.no/api/
