--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "nada-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --write \"./components\" \"./pages\" \"./lib\"",
-    "build-and-start": "yarn run build && yarn run start"
+    "prettier": "prettier --write \"./components\" \"./pages\" \"./lib\""
   },
   "dependencies": {
     "@emotion/react": "^11.4.1",
