--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.2",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
     "@navikt/ds-css": "^0.9.0",
@@ -27,9 +28,11 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.1",
     "react-markdown": "^7.0.1",
     "styled-components": "^5.3.1",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
