--- a/.nais/dev-gcp.yml
+++ b/.nais/dev-gcp.yml
@@ -12,4 +12,4 @@ spec:
     - "https://nada.dev.intern.nav.no/"
   env:
     - name: NEXT_PUBLIC_BACKEND 
-      value: https://nada.dev.intern.nav.no/api/
+      value: https://nada.dev.intern.nav.no/api
