--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.1",
     "react-markdown": "^7.0.1",
+    "react-tag-autocomplete": "^6.3.0",
     "styled-components": "^5.3.1",
     "swr": "^1.0.1",
     "yup": "^0.32.9"
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@types/cookie": "^0.4.1",
     "@types/react": "17.0.24",
+    "@types/react-tag-autocomplete": "^6.1.1",
     "@types/styled-components": "^5.1.14",
     "babel-plugin-styled-components": "^1.13.2",
     "cookie": "^0.4.1",
