--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/source-sans-pro": "^4.5.0",
     "@hookform/resolvers": "^2.8.2",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
