--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^2.8.2",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
+    "@naisutech/react-tree": "^2.0.11",
     "@navikt/ds-css": "^0.9.0",
     "@navikt/ds-icons": "^0.5.4",
     "@navikt/ds-react": "^0.10.1",
