--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cookie": "^0.4.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "graphql-tag": "^2.12.5",
     "prettier": "^2.4.1",
     "typescript": "4.4.3"
   },
