--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier --write \"./components\" \"./pages\" \"./lib\"",
-    "format-schema": "prettier --write \"lib/schema/schema.ts\""
+    "format-schema": "prettier --write \"lib/schema/schema.ts\"",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fontsource/source-sans-pro": "^4.5.0",
@@ -24,7 +26,6 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
     "graphql": "^15.6.1",
-    "graphql-request": "^3.6.1",
     "nav-frontend-core": "^6.0.1",
     "nav-frontend-ikoner-assets": "^3.0.1",
     "nav-frontend-spinner": "^3.0.1",
@@ -41,6 +42,12 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.2.1",
+    "@graphql-codegen/introspection": "2.1.0",
+    "@graphql-codegen/typescript": "2.2.4",
+    "@graphql-codegen/typescript-graphql-apollo": "^1.0.0",
+    "@graphql-codegen/typescript-operations": "2.1.8",
+    "@graphql-codegen/typescript-react-apollo": "3.1.6",
     "@types/cookie": "^0.4.1",
     "@types/react": "17.0.24",
     "@types/react-tag-autocomplete": "^6.1.1",
@@ -49,6 +56,7 @@
     "cookie": "^0.4.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "graphql-codegen-apollo-next-ssr": "^1.7.1",
     "graphql-tag": "^2.12.5",
     "prettier": "^2.4.1",
     "typescript": "4.4.3"
