WIP: Start to use mutatiion for update

--- a/codegen.yml
+++ b/codegen.yml
@@ -10,6 +10,8 @@ generates:
       - "typescript-react-apollo"
     config:
       withHooks: true
+      withMutationFn: true
+      withMutationOptionsType: true
 hooks:
   afterAllFileWrite:
     - prettier --write lib/queries
