--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@graphql-codegen/cli": "2.2.1",
     "@graphql-codegen/introspection": "2.1.0",
     "@graphql-codegen/typescript": "2.2.4",
