--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: "http://localhost:8080/query"
+schema: "http://localhost:8080/api/query"
 documents:
   - "lib/queries/*/*.ts"
 generates:
