--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/source-sans-pro": "^4.5.0",
     "@hookform/resolvers": "^2.8.2",
     "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.2",
     "@naisutech/react-tree": "^2.0.11",
     "@navikt/ds-css": "^0.9.0",
