--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@navikt/ds-react": "^0.10.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
+    "deepmerge": "^4.2.2",
     "graphql": "^15.6.1",
     "nav-frontend-core": "^6.0.1",
     "nav-frontend-ikoner-assets": "^3.0.1",
