REFACTOR: Viser requesters i dataGrid

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^5.0.1",
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.2",
+    "@mui/x-data-grid": "^4.0.2",
     "@naisutech/react-tree": "^2.0.11",
     "@navikt/ds-css": "^0.9.0",
     "@navikt/ds-icons": "^0.5.4",
