--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@navikt/ds-css": "^0.9.0",
     "@navikt/ds-icons": "^0.5.4",
     "@navikt/ds-react": "^0.10.1",
+    "@uiw/react-md-editor": "^3.6.5",
     "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
     "deepmerge": "^4.2.2",
@@ -35,6 +36,7 @@
     "nav-frontend-spinner": "^3.0.1",
     "nav-frontend-spinner-style": "^1.0.2",
     "next": "11.1.2",
+    "next-remove-imports": "^1.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
