FIX: viser nåværende tilganger, utløpte tilganger og requesters som lister når du er eier. Viser innvilget tilgang eller fjern tilgang om du ikke er eier av produktet Viser Feil om du ikke er innlogget Viser at du ikke har lov til å be om tilgang om du ikke er requester

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^2.24.0",
     "deepmerge": "^4.2.2",
     "graphql": "^15.6.1",
+    "moment": "^2.29.1",
     "nav-frontend-core": "^6.0.1",
     "nav-frontend-ikoner-assets": "^3.0.1",
     "nav-frontend-spinner": "^3.0.1",
