--- a/.nais/prod-gcp.yml
+++ b/.nais/prod-gcp.yml
@@ -2,9 +2,9 @@ apiVersion: "nais.io/v1alpha1"
 kind: "Application"
 metadata:
   name: nada-frontend
-  namespace: dataplattform
+  namespace: nada
   labels:
-    team: dataplattform
+    team: nada
 spec:
   # Note: As the backend URL is baked into source at build time,
   # the environment has been moved to the Dockerfile.
@@ -12,3 +12,4 @@ spec:
   port: 3000
   ingresses:
     - "https://nada.intern.nav.no/"
+
