--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.1",
+    "react-lines-ellipsis": "^0.15.0",
     "react-markdown": "^7.0.1",
     "react-tag-autocomplete": "^6.3.0",
+    "rehype-format": "^4.0.0",
     "styled-components": "^5.3.1",
     "swr": "^1.0.1",
     "yup": "^0.32.9"
@@ -58,6 +60,7 @@
     "@graphql-codegen/typescript-react-apollo": "3.1.6",
     "@types/cookie": "^0.4.1",
     "@types/react": "17.0.24",
+    "@types/react-lines-ellipsis": "^0.15.0",
     "@types/react-tag-autocomplete": "^6.1.1",
     "@types/styled-components": "^5.1.14",
     "babel-plugin-styled-components": "^1.13.3",
