style: re-format product add/remove cards

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-markdown": "^7.0.1",
     "react-tag-autocomplete": "^6.3.0",
     "rehype-format": "^4.0.0",
+    "remark-behead": "^2.3.3",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   },
