--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-tag-autocomplete": "^6.3.0",
     "rehype-format": "^4.0.0",
     "remark-behead": "^2.3.3",
+    "remark-title": "^1.0.4",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   },
