WIP: Adding amplitude

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@navikt/ds-icons": "^0.5.4",
     "@navikt/ds-react": "^0.10.1",
     "@uiw/react-md-editor": "^3.6.5",
+    "amplitude-js": "^8.9.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
     "deepmerge": "^4.2.2",
@@ -59,6 +60,7 @@
     "@graphql-codegen/typescript-graphql-apollo": "^1.0.0",
     "@graphql-codegen/typescript-operations": "2.1.8",
     "@graphql-codegen/typescript-react-apollo": "3.1.6",
+    "@types/amplitude-js": "^8.0.1",
     "@types/cookie": "^0.4.1",
     "@types/react": "17.0.24",
     "@types/react-lines-ellipsis": "^0.15.0",
