--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@navikt/ds-css": "^0.9.0",
     "@navikt/ds-icons": "^0.5.4",
     "@navikt/ds-react": "^0.10.1",
+    "@next/bundle-analyzer": "^12.0.4",
     "@uiw/react-md-editor": "^3.6.5",
     "amplitude-js": "^8.9.1",
     "classnames": "^2.3.1",
