--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -2,7 +2,8 @@ name: build and push
 on:
   push:
     branches:
-      - master
+      - '*'
+      - '!master'
 jobs:
   set-version:
     name: Set version
@@ -53,11 +54,11 @@ jobs:
         tags: ${{ env.image_prefix }}:latest, ${{ env.IMAGE }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache-new
-    -
+
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
       # https://github.com/moby/buildkit/issues/1896
-      name: Move cache
+    - name: Move cache
       run: |
         rm -rf /tmp/.buildx-cache
         mv /tmp/.buildx-cache-new /tmp/.buildx-cache
@@ -67,9 +68,3 @@ jobs:
         APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
         CLUSTER: dev-gcp
         RESOURCE: .nais/dev-gcp.yml
-    - name: Deploy to prod-gcp
-      uses: nais/deploy/actions/deploy@master
-      env:
-        APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-        CLUSTER: prod-gcp
-        RESOURCE: .nais/prod-gcp.yml
