--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@navikt/ds-icons": "^0.5.4",
     "@navikt/ds-react": "^0.10.1",
     "@next/bundle-analyzer": "^12.0.4",
-    "@uiw/react-md-editor": "^3.6.5",
     "amplitude-js": "^8.9.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
@@ -48,7 +47,9 @@
     "react-markdown": "^7.0.1",
     "react-tag-autocomplete": "^6.3.0",
     "rehype-format": "^4.0.0",
+    "rehype-stringify": "^9.0.2",
     "remark-behead": "^2.3.3",
+    "remark-gfm": "^3.0.1",
     "remark-title": "^1.0.4",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
