wip; remove collection

--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@navikt/ds-icons": "^0.5.4",
     "@navikt/ds-react": "^0.10.1",
     "@next/bundle-analyzer": "^12.0.4",
+    "@types/marked": "^4.0.1",
     "@uiw/react-md-editor": "^3.6.5",
     "amplitude-js": "^8.9.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
     "deepmerge": "^4.2.2",
     "graphql": "^15.6.1",
+    "marked": "^4.0.5",
     "moment": "^2.29.1",
     "nav-frontend-core": "^6.0.1",
     "nav-frontend-ikoner-assets": "^3.0.1",
@@ -47,9 +49,6 @@
     "react-lines-ellipsis": "^0.15.0",
     "react-markdown": "^7.0.1",
     "react-tag-autocomplete": "^6.3.0",
-    "rehype-format": "^4.0.0",
-    "remark-behead": "^2.3.3",
-    "remark-title": "^1.0.4",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   },
