Initial work on stories frontend
Co-authored-by: Erik Vattekar <erik.vattekar@nav.no>
Co-authored-by: frodesundby <frode.sundby@nav.no>
Co-authored-by: vebjorre <vebjorn.rekkebo@nav.no>

--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "nav-frontend-spinner-style": "^1.0.2",
     "next": "12.0.4",
     "next-remove-imports": "^1.0.6",
+    "plotly.js": "^2.8.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.1",
     "react-lines-ellipsis": "^0.15.0",
     "react-markdown": "^7.0.1",
+    "react-plotly.js": "^2.5.1",
     "react-tag-autocomplete": "^6.3.0",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
