--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@uiw/react-md-editor": "^3.6.5",
     "amplitude-js": "^8.9.1",
     "classnames": "^2.3.1",
+    "contrast-color": "^1.0.1",
     "date-fns": "^2.24.0",
     "deepmerge": "^4.2.2",
     "graphql": "^15.6.1",
