--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "nav-frontend-ikoner-assets": "^3.0.1",
     "nav-frontend-spinner": "^3.0.1",
     "nav-frontend-spinner-style": "^1.0.2",
-    "next": "12.0.4",
+    "next": "^12.0.7",
     "next-remove-imports": "^1.0.6",
     "plotly.js": "^2.8.1",
     "prop-types": "^15.7.2",
@@ -57,7 +57,7 @@
   },
   "devDependencies": {
     "@apollo/react-hooks": "^4.0.0",
-    "@graphql-codegen/cli": "2.2.1",
+    "@graphql-codegen/cli": "2.3.1",
     "@graphql-codegen/introspection": "2.1.0",
     "@graphql-codegen/typescript": "2.2.4",
     "@graphql-codegen/typescript-graphql-apollo": "^1.0.0",
