--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.1",
+    "react-intersection-observer": "^8.33.1",
     "react-lines-ellipsis": "^0.15.0",
     "react-markdown": "^7.0.1",
     "react-plotly.js": "^2.5.1",
