try to fit access into main section

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@mui/material": "^5.0.2",
     "@mui/x-data-grid": "^4.0.2",
     "@naisutech/react-tree": "^2.0.11",
-    "@navikt/ds-css": "^0.9.3",
-    "@navikt/ds-icons": "^0.5.4",
-    "@navikt/ds-react": "^0.18.4",
+    "@navikt/ds-css": "^0.18.7",
+    "@navikt/ds-icons": "^0.8.17",
+    "@navikt/ds-react": "^0.19.8",
     "@next/bundle-analyzer": "^12.0.4",
     "@types/marked": "^4.0.1",
     "@uiw/react-md-editor": "^3.6.5",
@@ -35,13 +35,10 @@
     "contrast-color": "^1.0.1",
     "date-fns": "^2.24.0",
     "deepmerge": "^4.2.2",
+    "framer-motion": "^6.3.11",
     "graphql": "^15.6.1",
     "marked": "^4.0.10",
     "moment": "^2.29.1",
-    "nav-frontend-core": "^6.0.1",
-    "nav-frontend-ikoner-assets": "^3.0.1",
-    "nav-frontend-spinner": "^3.0.1",
-    "nav-frontend-spinner-style": "^1.0.2",
     "next": "^12.0.7",
     "next-remove-imports": "^1.0.6",
     "plotly.js": "^2.8.1",
