--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@mui/x-data-grid": "^4.0.2",
     "@naisutech/react-tree": "^2.0.11",
     "@navikt/ds-css": "^0.18.7",
+    "@navikt/ds-css-internal": "^0.7.7",
     "@navikt/ds-icons": "^0.8.17",
     "@navikt/ds-react": "^0.19.8",
+    "@navikt/ds-react-internal": "^0.14.10",
     "@next/bundle-analyzer": "^12.0.4",
     "@types/marked": "^4.0.1",
     "@uiw/react-md-editor": "^3.6.5",
