--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@navikt/ds-icons": "^0.8.17",
     "@navikt/ds-react": "^0.19.8",
     "@navikt/ds-react-internal": "^0.14.10",
+    "@navikt/ds-tailwind": "^0.2.9",
     "@next/bundle-analyzer": "^12.0.4",
     "@types/marked": "^4.0.1",
     "@uiw/react-md-editor": "^3.6.5",
@@ -73,13 +74,16 @@
     "@types/react-lines-ellipsis": "^0.15.0",
     "@types/react-tag-autocomplete": "^6.1.1",
     "@types/styled-components": "^5.1.14",
+    "autoprefixer": "^10.4.8",
     "babel-plugin-styled-components": "^1.13.3",
     "cookie": "^0.4.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "graphql-codegen-apollo-next-ssr": "^1.7.1",
     "graphql-tag": "^2.12.5",
+    "postcss": "^8.4.16",
     "prettier": "^2.4.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.4.3"
   },
   "prettier": {
