--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-lines-ellipsis": "^0.15.0",
     "react-markdown": "^7.0.1",
     "react-plotly.js": "^2.5.1",
+    "react-select": "^5.4.0",
     "react-tag-autocomplete": "^6.3.0",
     "react-vega": "^7.5.1",
     "styled-components": "^5.3.1",
