ci: forenklet pipeline

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -6,12 +6,10 @@ metadata:
   labels:
     team: nada
 spec:
-  # Note: As the backend URL is baked into source at build time,
-  # the environment has been moved to the Dockerfile.
   image: {{image}}
   port: 3000
   ingresses:
-    - 'https://data.dev.intern.nav.no/'
+    - {{ingress}}
   accessPolicy:
     outbound:
       rules:
