--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   build:
-    runs-on: latest
+    runs-on: ubuntu-latest
     outputs:
       image: ${{ steps.set-version.outputs.image }}
     steps:
