--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: set Docker image name:tag
         id: image
         run: |
-          echo "IMAGE="ghcr.io/${{ github.repository }}:$(date '+%Y-%m-%d')-$(git --no-pager log -1 --pretty=%h)" >> $GITHUB_ENV
+          echo "IMAGE=ghcr.io/${{ github.repository }}:$(date '+%Y-%m-%d')-$(git --no-pager log -1 --pretty=%h)" >> $GITHUB_ENV
           echo ::set-output name=image::"$IMAGE"
 
       - uses: docker/setup-buildx-action@v2
