fix: hookform/resolvers pinned to 2.8.2
Co-authored-by: Erik Vattekar <erik.vattekar@nav.no>

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fontsource/source-sans-pro": "^4.5.0",
-    "@hookform/resolvers": "^2.8.2",
+    "@hookform/resolvers": "2.8.2",
     "@mui/icons-material": "^5.0.1",
-    "@mui/lab": "^5.0.0-alpha.51",
+    "@mui/lab": "^5.0.0-alpha.99",
     "@mui/material": "^5.0.2",
     "@mui/x-data-grid": "^4.0.2",
     "@naisutech/react-tree": "^2.0.11",
@@ -27,7 +27,7 @@
     "@navikt/ds-css-internal": "^0.7.7",
     "@navikt/ds-datepicker": "^2.1.5",
     "@navikt/ds-icons": "^0.8.17",
-    "@navikt/ds-react": "^0.19.8",
+    "@navikt/ds-react": "^0.19.27",
     "@navikt/ds-react-internal": "^0.14.10",
     "@navikt/ds-tailwind": "^0.2.9",
     "@next/bundle-analyzer": "^12.0.4",
@@ -44,7 +44,7 @@
     "graphql": "^15.6.1",
     "marked": "^4.0.10",
     "moment": "^2.29.4",
-    "next": "12.0.7",
+    "next": "^12.3.0",
     "next-remove-imports": "^1.0.6",
     "plotly.js": "^2.12.1",
     "prop-types": "^15.7.2",
