--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "react-vega": "^7.6.0",
     "vega": "^5.22.1",
     "vega-lite": "^5.5.0",
-    "yup": "^0.32.9",
-    "clsx": "1.2.1"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@apollo/react-hooks": "^4.0.0",
