remove some deps, hopefully nothing's broken

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.3",
     "@apollo/react-ssr": "^4.0.0",
+    "@emotion/styled": "^11.10.5",
     "@fontsource/source-sans-pro": "^4.5.11",
     "@hookform/resolvers": "2.9.10",
     "@mui/lab": "^5.0.0-alpha.114",
@@ -29,7 +30,6 @@
     "@uiw/react-md-editor": "^3.20.2",
     "amplitude-js": "^8.21.3",
     "classnames": "^2.3.2",
-    "dangerously-set-html-content": "^1.0.9",
     "date-fns": "^2.29.3",
     "deepmerge": "^4.2.2",
     "graphql": "^16.6.0",
@@ -44,7 +44,6 @@
     "react-markdown": "^8.0.4",
     "react-plotly.js": "^2.6.0",
     "react-select": "^5.7.0",
-    "react-tag-autocomplete": "^6.3.0",
     "react-vega": "^7.6.0",
     "vega": "^5.22.1",
     "vega-lite": "^5.6.0",
@@ -61,7 +60,6 @@
     "@types/amplitude-js": "^8.16.2",
     "@types/cookie": "^0.5.1",
     "@types/react": "18.0.26",
-    "@types/react-tag-autocomplete": "^6.3.0",
     "autoprefixer": "^10.4.13",
     "cookie": "^0.5.0",
     "eslint": "8.31.0",
