--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@uiw/react-md-editor": "^3.20.2",
     "amplitude-js": "^8.21.3",
     "classnames": "^2.3.2",
+    "dangerously-set-html-content": "^1.0.13",
     "date-fns": "^2.29.3",
     "deepmerge": "^4.2.2",
     "graphql": "^16.6.0",
