--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@uiw/react-md-editor": "^3.20.2",
     "amplitude-js": "^8.21.3",
+    "apollo-upload-client": "^17.0.0",
     "classnames": "^2.3.2",
     "dangerously-set-html-content": "^1.0.13",
     "date-fns": "^2.29.3",
@@ -59,6 +60,7 @@
     "@graphql-codegen/typescript-operations": "2.5.11",
     "@graphql-codegen/typescript-react-apollo": "3.3.7",
     "@types/amplitude-js": "^8.16.2",
+    "@types/apollo-upload-client": "^17.0.2",
     "@types/cookie": "^0.5.1",
     "@types/react": "18.0.26",
     "autoprefixer": "^10.4.13",
