correct nais manifest file name

--- a/.github/workflows/build-and-deploy-dev.yaml
+++ b/.github/workflows/build-and-deploy-dev.yaml
@@ -66,3 +66,4 @@ jobs:
         env:
           CLUSTER: dev-gcp
           VAR: ingress=https://data.dev.intern.nav.no/
+          RESOURCE: .nais/nais.yaml
