--- a/.github/workflows/build-and-deploy-prod.yaml
+++ b/.github/workflows/build-and-deploy-prod.yaml
@@ -65,3 +65,4 @@ jobs:
         env:
           CLUSTER: prod-gcp
           VAR: ingress=https://data.intern.nav.no/
+          RESOURCE: .nais/nais.yaml,.nais/alert.yaml
