--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -67,7 +67,7 @@ jobs:
         env:
           CLUSTER: dev-gcp
           VAR: ingress=https://data.dev.intern.nav.no/
-          RESOURCE: .nais/nais.yml
+          RESOURCE: .nais/nais.yaml
 
   deploy-prod:
     runs-on: ubuntu-latest
@@ -82,4 +82,4 @@ jobs:
         env:
           CLUSTER: prod-gcp
           VAR: ingress=https://data.intern.nav.no/
-          RESOURCE: .nais/nais.yml,.nais/alert.yaml
+          RESOURCE: .nais/nais.yaml,.nais/alert.yaml
