--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@navikt/ds-react": "^2.0.11",
     "@navikt/ds-react-internal": "^2.0.11",
     "@navikt/ds-tailwind": "^2.0.11",
+    "@navikt/aksel-icons": "2.8.16",
     "@next/bundle-analyzer": "^13.1.1",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@uiw/react-md-editor": "^3.20.2",
