fix dev ingress

--- a/.github/workflows/build-and-deploy-dev.yaml
+++ b/.github/workflows/build-and-deploy-dev.yaml
@@ -65,5 +65,5 @@ jobs:
         uses: nais/deploy/actions/deploy@v1
         env:
           CLUSTER: dev-gcp
-          VAR: ingress=https://data.dev.intern.nav.no/
+          VAR: ingress=https://data.intern.dev.nav.no/
           RESOURCE: .nais/nais.yaml
