--- a/.github/workflows/build-and-deploy-prod.yaml
+++ b/.github/workflows/build-and-deploy-prod.yaml
@@ -6,6 +6,10 @@ env:
   APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
   RESOURCE: .nais/nais.yaml
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
