ci: bygg på push og manuelt start

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,8 +1,6 @@
 name: "Build and deploy"
-on:
-  push:
-    branches:
-      - '*'
+on: [workflow_dispatch, push]
+
 env:
   APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
   RESOURCE: .nais/nais.yaml
