--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@hookform/resolvers": "2.9.10",
     "@mui/lab": "^5.0.0-alpha.114",
     "@mui/material": "^5.11.3",
-    "@navikt/ds-css": "^2.0.11",
-    "@navikt/ds-css-internal": "^2.0.11",
-    "@navikt/ds-icons": "^2.0.11",
-    "@navikt/ds-react": "^2.0.11",
-    "@navikt/ds-react-internal": "^2.0.11",
-    "@navikt/ds-tailwind": "^2.0.11",
-    "@navikt/aksel-icons": "2.8.16",
+    "@navikt/aksel": "^5.8.0",
+    "@navikt/ds-css": "^5.8.0",
+    "@navikt/ds-css-internal": "^3.4.3",
+    "@navikt/ds-icons": "^3.4.3",
+    "@navikt/ds-react": "^5.8.0",
+    "@navikt/ds-react-internal": "^3.4.3",
+    "@navikt/ds-tailwind": "^5.8.0",
     "@next/bundle-analyzer": "^13.1.1",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@uiw/react-md-editor": "^3.20.2",
