deploy without api key

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,12 +2,12 @@ name: "Build and deploy"
 on: [workflow_dispatch, push]
 
 env:
-  APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
   RESOURCE: .nais/nais.yaml
 
 permissions:
   contents: read
   packages: write
+  id-token: write
 
 jobs:
   build:
