--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/source-sans-pro": "^4.5.11",
     "@hookform/resolvers": "2.9.10",
-    "@mui/lab": "^5.0.0-alpha.114",
+    "@mui/lab": "^5.0.0-alpha.159",
     "@mui/material": "^5.11.3",
+    "@mui/x-tree-view": "^6.17.0",
     "@navikt/aksel": "^5.8.0",
     "@navikt/ds-css": "^5.8.0",
     "@navikt/ds-css-internal": "^3.4.3",
