--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-intersection-observer": "^9.4.1",
     "react-markdown": "^9.0.1",
     "react-select": "^5.7.0",
+    "remark-gfm": "^4.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
