--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-markdown": "^9.0.1",
     "react-select": "^5.7.0",
     "remark-gfm": "^4.0.0",
-    "yup": "^0.32.11"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@apollo/react-hooks": "^4.0.0",
@@ -62,6 +62,7 @@
     "@types/amplitude-js": "^8.16.2",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/cookie": "^0.6.0",
+    "@types/lodash": "^4.14.202",
     "@types/react": "18.2.47",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
