--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,61 +1,25 @@
 name: "Build and deploy"
 on: [workflow_dispatch, push]
 
-env:
-  RESOURCE: .nais/nais.yaml
-
 permissions:
   contents: read
   packages: write
   id-token: write
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
     outputs:
-      image: ${{ steps.image.outputs.image }}
+      image: ${{ steps.docker-build-push.outputs.image }}
     steps:
       - uses: actions/checkout@v4
-      - name: set Docker image name:tag
-        id: image
-        run: |
-          export IMAGE="ghcr.io/${{ github.repository }}:$(date '+%Y-%m-%d')-$(git --no-pager log -1 --pretty=%h)"
-          echo "IMAGE=$IMAGE" >> $GITHUB_ENV
-          echo ::set-output name=image::"$IMAGE"
-
-      - uses: docker/setup-buildx-action@v3
-      - uses: actions/cache@v3
+      - name: Push docker image to GAR
+        uses: nais/docker-build-push@v0
+        id: docker-build-push
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-             name: Build and push
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Dockerimage
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ env.IMAGE }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
-      - run: |
-          echo "Built new image! :rocket:" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "${{ env.IMAGE }}" >> $GITHUB_STEP_SUMMARY
-      # Temp fix
-      # https://github.com/docker/build-push-action/issues/252
-      # https://github.com/moby/buildkit/issues/1896
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          team: nada
+          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
 
   deploy-dev:
     runs-on: ubuntu-latest
@@ -68,7 +32,7 @@ jobs:
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: dev-gcp
-          VAR: ingress=https://data.intern.dev.nav.no/
+          VAR: image=${{ needs.build-and-push.outputs.image }},ingress=https://data.intern.dev.nav.no/
           RESOURCE: .nais/nais.yaml
 
   deploy-prod:
@@ -83,5 +47,5 @@ jobs:
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: prod-gcp
-          VAR: ingress=https://data.intern.nav.no/
+          VAR: image=${{ needs.build-and-push.outputs.image }},ingress=https://data.intern.nav.no/
           RESOURCE: .nais/nais.yaml,.nais/alert.yaml
