--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,7 @@ jobs:
 
   deploy-dev:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-and-push
     env:
       IMAGE: ${{ needs.build.outputs.image }}
     steps:
