--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
     schedule:
       interval: "weekly"
     groups:
-      docker:
+      npm:
         patterns:
           - '*'
   - package-ecosystem: "github-actions"
