--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier --write \"./components\" \"./pages\" \"./lib\"",
-    "format-schema": "prettier --write \"lib/schema/schema.ts\"",
-    "codegen": "graphql-codegen --config ./codegen.ts"
+    "format-schema": "prettier --write \"lib/schema/schema.ts\""
   },
   "dependencies": {
-    "@apollo/client": "^3.9.9",
-    "@apollo/react-ssr": "^4.0.0",
     "@emotion/styled": "^11.11.5",
     "@fontsource/source-sans-pro": "^5.0.8",
     "@hookform/resolvers": "3.3.4",
@@ -32,12 +29,10 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@uiw/react-md-editor": "^4.0.4",
     "amplitude-js": "^8.21.9",
-    "apollo-upload-client": "^18.0.1",
     "classnames": "^2.5.1",
     "dangerously-set-html-content": "^1.1.0",
     "date-fns": "^3.6.0",
     "deepmerge": "^4.3.1",
-    "graphql": "^16.8.1",
     "next": "^14.1.4",
     "next-remove-imports": "^1.0.12",
     "node-fetch": "^3.3.2",
@@ -52,15 +47,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@apollo/react-hooks": "^4.0.0",
-    "@graphql-codegen/cli": "5.0.2",
-    "@graphql-codegen/introspection": "4.0.3",
-    "@graphql-codegen/typescript": "4.0.6",
-    "@graphql-codegen/typescript-graphql-apollo": "^2.0.0",
-    "@graphql-codegen/typescript-operations": "4.2.0",
-    "@graphql-codegen/typescript-react-apollo": "4.3.0",
     "@types/amplitude-js": "^8.16.5",
-    "@types/apollo-upload-client": "^18.0.0",
     "@types/cookie": "^0.6.0",
     "@types/lodash": "^4.17.0",
     "@types/react": "18.2.73",
@@ -70,8 +57,6 @@
     "cookie": "^0.6.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
-    "graphql-codegen-apollo-next-ssr": "^1.7.4",
-    "graphql-tag": "^2.12.6",
     "postcss": "^8.4.38",
     "prettier": "^3.2.4",
     "tailwindcss": "^3.4.3",
