await bumping eslint and @mui/*

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/source-sans-pro": "^5.0.8",
     "@hookform/resolvers": "3.9.0",
-    "@mui/lab": "^6.0.0-beta.8",
-    "@mui/material": "^6.0.0",
+    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^5.16.7",
     "@mui/x-tree-view": "^7.14.0",
     "@navikt/aksel": "^6.16.2",
     "@navikt/ds-css": "^6.1.0",
@@ -55,7 +55,7 @@
     "@typescript-eslint/parser": "^8.3.0",
     "autoprefixer": "^10.4.20",
     "cookie": "^0.6.0",
-    "eslint": "9.9.1",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.2.7",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
