--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-markdown": "^9.0.1",
     "react-select": "^5.8.0",
     "remark-gfm": "^4.0.0",
+    "sharp": "^0.33.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
