--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "@typescript-eslint/parser": "^8.3.0",
     "autoprefixer": "^10.4.20",
     "cookie": "^0.6.0",
-    "eslint": "9.9.1",
-    "eslint-config-next": "14.2.7",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.8",
     "postcss": "^8.4.44",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.10",
